Fixed scrollbar underrunning progress when its a short raster (css animation slowed it down so it only got to loike 50% width before the job was at 100%)

--- a/i/css/screen.css
+++ b/i/css/screen.css
@@ -201,8 +201,16 @@ textarea {
 	width: 300px;
 	margin: auto;
 	left: 0;
-	right: 0;
+	right: 0
+  -webkit-transition: none !important;
+  transition: none !important;;
 }
+
+#rasterProgressShroud .progress-bar {
+  -webkit-transition: none !important;
+  transition: none !important;;
+}
+
 
 #rasterProgressShroud h1 {
 	text-align: center;
